Добавлена сущьность user, lint
