# openapi/openapi.yaml
@@ -3,7 +3,84 @@ info:
   title: Task Management API
   version: 1.0.0
 
+
 paths:
+  /users:
+    get:
+      summary: Get all users
+      operationId: GetUser
+      tags:
+        - users
+      responses:
+        '200':
+          description: A list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+    post:
+      summary: Post a new user
+      operationId: PostUser
+      tags:
+        - users
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '201':
+          description: The created user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+  /users/{id}:
+    patch:
+      summary: Path a user data by id
+      operationId: PatchUser
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '200':
+          description: The updated user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+
+    delete:
+      summary: Delete a user by id
+      operationId: DeleteUser
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '204':
+          description: Task deleted successfully
+
   /tasks:
     get:
       summary: Get all tasks
@@ -84,6 +161,33 @@ paths:
 
 components:
   schemas:
+    User:
+      type: object
+      required:
+        - id
+        - email
+        - password
+        - created_at
+        - deleted_at
+        - updated_at
+      properties:
+        id:
+          type: integer
+          format: int64
+        email:
+          type: string
+        password:
+          type: string
+        created_at:
+          type: string
+          format: date-time
+        deleted_at:
+          type: string
+          format: date-time
+        updated_at:
+          type: string
+          format: date-time
+
     Task:
       type: object
       required:
